# Escape

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: design.md
examples/: CMakeLists.txt  pong.cpp
include/esc/: area.hpp  brush.hpp  color.hpp  color_index.hpp  colors.hpp  debug.hpp  default_color.hpp  esc.hpp  event.hpp  glyph.hpp  io.hpp  key.hpp  mask.hpp  mouse.hpp  point.hpp  sequence.hpp  terminal.hpp  terminfo.hpp  trait.hpp  true_color.hpp
include/esc/detail/: any_of.hpp  are_same_as.hpp  console_file.hpp  debug.hpp  display.hpp  is_any_of.hpp  is_convertible_to_any_of.hpp  is_scoped_enum.hpp  is_urxvt.hpp  mask.hpp  mb_to_u32.hpp  print.hpp  signals.hpp  to_bytes.hpp  to_char32_t.hpp  traits_to_int_sequence.hpp  transcode.hpp  tty_file.hpp  u32_to_mb.hpp
include/escape/: escape.hpp
src/: io.cpp  mouse.cpp  point.cpp  sequence.cpp  terminal.cpp  terminfo.cpp  trait.cpp
src/detail/: console_file.cpp  debug.cpp  display.cpp  is_urxvt.cpp  mb_to_u32.cpp  print.cpp  signals.cpp  traits_to_int_sequence.cpp  transcode.cpp  tty_file.hpp  u32_to_mb.cpp
test/: escape.test.cpp
tests/: CMakeLists.txt  glyph.test.cpp
tools/: CMakeLists.txt  temp  termcaps.cpp  terminfo.sh  ti.txt
